--- a/flanaganthesis.tex
+++ b/flanaganthesis.tex
@@ -263,17 +263,15 @@ Examples with architectural elements in the DSpace reasoner
 
 
 \chapter{Conceptual Design Requirements}
-This chapter presents a hierarchical structure for architectural concepts and qualitative spatial attributes in architecture, demonstrates how each can be spatially interpreted in the context of formal qualitative spatial calculi, and used to validate design requirements in the computational framework of the Dspace reasoner. 
+This chapter presents a hierarchical structure for building conceptual design requirements, demonstrates how the elements that build conceptual design requirements can be spatially interpreted in the context of formal qualitative spatial calculi, and used to validate design requirements in the computational framework of the Dspace reasoner. 
 
-The architectural concepts and spatial qualities presented here were ascertained from literature on architectural design \cite{tbd}, museum research on visitor behavior \cite{tbd}, and building regulations and codes \cite{tbd}. Their definitions are explicit characterizations of architectural concepts and qualities that are based on heuristic architectural knowledge and common sense notions of spatial relationships. The objective is not an exhaustive discussion on these concepts and qualities or a validation for their interpretation in terms of a spatial or design perspective, rather it is to demonstrate how each can be represent and reasoned with in a computational framework to validate conceptual design requirements against the quantitative structures and artefacts of a design. 
+Conceptual design requirements, and the elements used to build them (architectural concepts and qualitative spatial attributes found in architecture) were ascertained from literature on architectural design \cite{tbd}, museum research on visitor behavior \cite{tbd}, and building regulations and codes \cite{tbd}. Their definitions are explicit characterizations of architectural concepts and design qualities that are based on heuristic architectural knowledge and common sense notions of spatial relationships. The objective is not an exhaustive discussion on these requirements or a validation for their interpretation in terms of a spatial or design perspective, rather it is to demonstrate how each can be represent and reasoned with in a computational framework to validate conceptual design requirements against the quantitative structures and artefacts of a design. 
 
-The chapter is structured as follows: Section 1 describes the hierarchical structure of conceptual design requirements. Section 2 presents a set of qualitative spatial attributes found in architecture, shows how each can be interpreted using formal qualitative spatial calculi, and represented formally within DSpace reasoner. Section 3 presents a set of architectural concepts that are built using the spatial qualities presented in the section 2 and shows how they can be used to reason about design requirements within the DSpace reasoner. Section 4 presents use case scenarios of the DSpace reasoner to show how a user can use DSpace to validate a design per the it's design requirements.
+The chapter is structured as follows: Section 1 describes the hierarchical structure of conceptual design requirements. Section 2 presents a set of qualitative spatial attributes found in architecture, shows how each can be interpreted using formal qualitative spatial calculi, and represented formally within DSpace reasoner. Section 3 presents a set of architectural concepts that are built using the spatial qualities presented in the section 2 and shows how they can be used to reason about design requirements within the DSpace reasoner. Section 4 demonstrates how a the DSpace reasoner can be used to validate a design per it's conceptual design requirements.
 
 \section{Hierarchy}
-This design hierarchy developed here, is built on the discretion of the design problem into a design space, a quality space, and a quantity space. At the highest level, the design space involves the architectural design semantics (architectural concepts) and qualities (qualitative spatial attributes found in architecture) that emerge in architecture. At the lowest level, the quantitative space involves the precise geometries of the architectural structures found in the design. The middle layer, the qualitative space, mediates the two via qualitative spatial representations of orientation, topology, and distance.
-
-Architectural concepts and qualitative spatial attributes found in architecture are build on top of the physical / structural and artefactual geometries of a design in a hierarchical structure. Architectural concepts are defined by combining qualitative spatial attributes found in architecture via the logical operators of conjunction and disjunction. Defining an architectural concept is not limited to qualitative spatial attributes, spatial relationships of orientation, topology, and distance can be used, as well as other geometric primitives such as area, angle, and length measurements. Similarly, qualitative spatial attributes found in architecture are defined by qualitative spatial relationships of orientation, topology, and distance. 
-   
+The design hierarchy developed in this section, is built on the discretion of the design problem into a design space, a quality space, and a quantity space. At the highest level, the design space involves the architectural design semantics (architectural concepts) and qualities (qualitative spatial attributes found in architecture) that emerge in architecture. At the lowest level, the quantitative space involves the precise geometries of the architectural structures found in the design. The qualitative space mediates between the abstractions of the design layer and the concreteness of the quantitative later using qualitative spatial representation and reasoning.
+ 
 \begin{figure}[H]
 \centering
 \includegraphics[width=140mm]{hierarchy2}
@@ -281,7 +279,7 @@ Architectural concepts and qualitative spatial attributes found in architecture 
 \label{hierarchy}
 \end{figure}
 
-Figure \ref{hierarchy} shows the design hierarchy of the DSpace reasoner.
+Figure \ref{hierarchy} shows the design hierarchy used in the DSpace reasoner. Conceptual design requirements are built from the architectural concepts and QSA's of the hightest level of the hierarchy. Within the hierarchy, architectural concepts are built using QSAs, but are not limited to only these, spatial relationships of orientation, topology, and distance can be used, as well as other geometric primitives such as area, angle, and length measurements. QSAs are defined by the qualitative spatial relationships of orientation, topology, and distance. These qualitative spatial relationships emerge from the quantitative, physical, and artefactual geometries of the the design. TBD: physical structures define the way the architecture is experiences and influences the functional / performance of the design from a conceptual design perspective.
 
 
 \section{Qualitative Spatial Attributes in Architecture}
@@ -299,7 +297,7 @@ The positioning attribute defines an orientational relationship between a pair o
 \label{position}
 \end{figure}
 
-The positioning attribute is interpreted spatially, in DSpace, using the Single Cross (SCC) orientation calculus \cite{Freksa92usingorientation}. SCC defines the orientation of a point C (referent) with respect to a point B (relatum) from the viewpoint of a point A (origin). The positioning attribute uses the SCC partitioning scheme to orientationally relate two points (origin, referent) in the context of an external frame of reference (relatum). In DSpace, the reference point is defined as the centroid of the context space. The assumption here is that the context space will be generally rectangular in shape.
+The positioning attribute is interpreted spatially, in DSpace, using the Single Cross (SCC) orientation calculus \cite{Freksa92usingorientation}. SCC defines the orientation of a point C (referent) with respect to a point B (relatum) from the viewpoint of a point A (origin). The positioning attribute uses the SCC partitioning scheme to orientationally relate two points (origin, referent) in the context of an external frame of reference (relatum). In DSpace, the reference point is defined as the centroid of the context space. By partitioning space using the centroid an approximation is made that partitions the space into the positioning relationships. The assumption here is that the context space will be generally rectangular in shape.
 
 \begin{figure}[H]
 \centering
